--- a/todo
+++ b/todo
@@ -3,10 +3,8 @@ TODO for Jarvis:
 
 average response time is 1.5 - 4 sec
 figuring out if its a problem: maybe change the voice a little slow
-Current problem: fix bad audio input have it recognize spacial sound and adapt for background noise with the volume
+Current problem:  add interput feature
 
-#1 add interput feature
-#2 add history feature with text file it rings up at the beginning when setting everything up
-#3 add all action features
-#4 add opencv personalized face recognition use threading for full computer utilization
-#5 find more api to maybe add to it to make it not slower
+# add history feature with text file it rings up at the beginning when setting everything up
+# add all action features
+# add opencv personalized face recognition use threading for full computer utilization
